add brief intro to App B

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -2,11 +2,10 @@
 
 \chapter{Loose Ends}
 
-\todo[inline]{Write a broad-scale introduction to this appendix.}
 
 
 
-
+Thus ends our technical discussion of the interaction of algebraic geometry and algebraic topology.  Before closing the volume entirely, we take the time to put some of these theorems and ideas into context, in the senses of adjacent mathematics, mathematical history, and future directions as yet unexplored.
 
 
 
@@ -28,7 +27,7 @@
 
 
 
-In this section, we discuss various topics (sometimes very sketchily, sometimes in more detail) which are currently poorly understood but which also are now coming over the horizon.  With any luck, a number of these will be resolved by the time a second printing of this book becomes a possibility, though many others will probably take the better part of a century to fully resolve.  Accordingly, this is obviously a rather eclectic collection of loose ends; we have made only the barest effort to be comprehensive, and we have certainly missed huge swaths of relevant active research subjects out of preference for the author's own interests.  While the inclusion of this section may ``date'' the book as the problems pass from unresolved to resolved, for pedagogical reasons alone it seems important to name the kinds of questions that one might pursue using the tools we have built up.
+In this section, we discuss various topics (sometimes very sketchily, sometimes in more detail) which are currently poorly understood but which also are now coming over the horizon.  With any luck, a number of these will be resolved by the time a second printing of this book becomes a possibility, though many others will probably take the better part of a century to fully resolve.  Accordingly, this is obviously a rather eclectic collection of loose ends; we have made only the barest effort to be comprehensive, and we have certainly missed huge swaths of relevant active research subjects out of preference for the author's own interests.  While the inclusion of this section may ``date'' the book as the problems pass from unresolved to resolved, or as conjectures are confronted by counterevidence, for pedagogical reasons alone it seems important to name the kinds of questions that one might pursue using the tools we have built up.
 
 These are sorted very roughly by their order of appearance in the main thread of the book.
 
