knock out some \citeme's

--- a/main.bib
+++ b/main.bib
@@ -484,6 +484,24 @@ MRREVIEWER = {Tyler D. Lawson},
       YEAR = {2014},
 }
 
+@article {BehrensGoodwillie,
+    AUTHOR = {Behrens, Mark},
+     TITLE = {The {G}oodwillie tower and the {EHP} sequence},
+   JOURNAL = {Mem. Amer. Math. Soc.},
+  FJOURNAL = {Memoirs of the American Mathematical Society},
+    VOLUME = {218},
+      YEAR = {2012},
+    NUMBER = {1026},
+     PAGES = {xii+90},
+      ISSN = {0065-9266},
+      ISBN = {978-0-8218-6902-4},
+   MRCLASS = {55Q40 (55Q10 55Q15)},
+  MRNUMBER = {2976788},
+MRREVIEWER = {Gregory Z. Arone},
+       DOI = {10.1090/S0065-9266-2011-00645-3},
+       URL = {http://dx.doi.org/10.1090/S0065-9266-2011-00645-3},
+}
+
 @article {BehrensModularDescription,
     AUTHOR = {Behrens, Mark},
      TITLE = {A modular description of the {$K(2)$}-local sphere at the
@@ -882,6 +900,16 @@ MRREVIEWER = {Andrew J. Baker},
 MRREVIEWER = {Frederick Cohen},
        DOI = {10.2307/1971440},
        URL = {http://dx.doi.org/10.2307/1971440},
+}
+
+@article{Dicke,
+author = {H. Dicke, R},
+year = {1990},
+month = {01},
+pages = {121-},
+title = {Dirac's Cosmology and Mach's Principle},
+volume = {192},
+booktitle = {Physical Cosmology and Philosophy}
 }
 
 @incollection {DouglasHenriques,
