--- a/powerops.tex
+++ b/powerops.tex
@@ -405,8 +405,7 @@ f \circ P^{\Sigma_p}_E = P^{\Sigma_p}_F \circ f^{\sm p}_{h\Sigma_p}. \qedhere
 \]
 \end{theorem}
 
-\begin{theorem}
-\citeme{Find a Lawson citation for this last claim.}
+\begin{theorem}[{\cite[Proposition 33]{HopkinsLawson}}]
 Let $E$ be an $E_\infty$--ring spectrum and let $X$ be a space such that $E^{\Susp^\infty_+ X}$ is a wedge of copies of $E$.  The map \[\iota^* \otimes \Delta^*\co \widetilde E^* X^{\sm G}_{hG} \to \widetilde E^* X^{\sm G} \oplus \widetilde E^*(X \sm BG_+)\] is then injective.\footnote{The actual statement of McClure's result~\cite[Proposition VIII.7.3]{BMMS} has several additional hypotheses: $\pi_* E$ is taken to be even-concentrated and free over $\Z_{(p)}$, $X$ has homology free abelian in even dimensions and zero in odd dimensions, and $X$ and $E$ are both taken to be finite type.  Although this is the theorem cited in the source material~\cite[Section 4]{Ando}~\cite[Proof of Proposition 6.1]{AHSHinfty}, the version that has the weak hypotheses that we require only appeared in print much later.} \qed
 \end{theorem}
 
