--- a/unknowns.tex
+++ b/unknowns.tex
@@ -327,7 +327,7 @@ An unpublished theorem of Hopkins and Lurie states that the \textit{discrepancy 
 \end{align*}
 By setting $E = \S$, it follows that the homotopy groups of $I_{\Z}$ mostly match those of $\S$ itself (or, rather, their Pontryagin duals), so computing them is equivalent to computing the homotopy groups of spheres.  The Hopkins--Lurie theorem gives an interesting approach to performing this computation: the chromatic fracture square for $L_d \gl_1 E_\Gamma$ couples to the logarithm to rewrite this square in terms of $\widehat L_j$--localizations of $E_\Gamma$, intertwined by very complicated power operation formulas.  It would be an extremely interesting exercise to see this play out even at low heights.
 
-Finally there is a substantially different approach to associating algebro-geometric objects to the elliptic cohomology of spaces, as pioneered in work of Grojnowski~\cite{Grojnowski} and of Ginzburg--Kapranov--Vasserot~\cite{GKV}, which has been used to enormous effect by Lurie in his wide-ranging program to realize various pieces of elliptic cohomology completely internally to the algebric geometry of $E_\infty$--ring spectra~\cite{LurieSurveyOfEll}.\footnote{The $\sigma$--orientation arises essentially from considering the objects associated to $BU(n)$ and $BO(n)$ using these machines (see \cite[Section 5.1]{LurieSurveyOfEll} especially) and identifying certain naturally occuring local systems (of spectra).}  Any serious student of elliptic cohomology should also become familiar with this framework.
+Finally there is a substantially different approach to associating algebro-geometric objects to the elliptic cohomology of spaces, as pioneered in work of Grojnowski~\cite{Grojnowski} and of Ginzburg--Kapranov--Vasserot~\cite{GKV}, which has been used to enormous effect by Lurie in his wide-ranging program to realize various pieces of elliptic cohomology completely internally to the algebric geometry of $E_\infty$--ring spectra~\cite{LurieSurveyOfEll}.\footnote{The $\sigma$--orientation arises essentially from considering the objects associated to $BU(n)$ and $BO(n)$ using these machines (see \cite[Section 5.1]{LurieSurveyOfEll} especially) and identifying certain naturally occuring local systems (of spectra).}  Any serious student of elliptic cohomology should also become familiar with this framework.  It has one feature that is especially curious and worth emphasizing here: the study of power operations is incidental to the Lurie-style approach of working with $E_\infty$ ring spectra, but his framework uses in a critical way the geometry of $p$--divisible groups.  It must therefore be the case that the structure of a $p$--divisible group---and, more presumptuously and more specifically, its subgroup lattice as in \Cref{PowerOpnsSection}---must entirely encode its theory of power operations.  It is very much worthwhile to understand this connection in more generality than just in the setting of Morava $E$--theory.
 
 
 
