remarks about unstable BP comodules

--- a/main.bib
+++ b/main.bib
@@ -1673,6 +1673,23 @@ MRREVIEWER = {Joseph H. Silverman},
 MRREVIEWER = {R. E. Stong},
 }
 
+@article {JohnsonWilsonProjDim,
+    AUTHOR = {Johnson, David Copeland and Wilson, W. Stephen},
+     TITLE = {Projective dimension and {B}rown-{P}eterson homology},
+   JOURNAL = {Topology},
+  FJOURNAL = {Topology. An International Journal of Mathematics},
+    VOLUME = {12},
+      YEAR = {1973},
+     PAGES = {327--353},
+      ISSN = {0040-9383},
+   MRCLASS = {57D90 (55B20)},
+  MRNUMBER = {0334257},
+MRREVIEWER = {A. Liulevicius},
+       DOI = {10.1016/0040-9383(73)90027-X},
+       URL = {http://dx.doi.org/10.1016/0040-9383(73)90027-X},
+}
+
+
 @incollection {Katz,
     AUTHOR = {Katz, Nicholas M.},
      TITLE = {Crystalline cohomology, {D}ieudonn\'e modules, and {J}acobi
