first pass at including Nat's section

--- a/preamble.tex
+++ b/preamble.tex
@@ -229,6 +229,8 @@
 \newcommand{\EinftyRings}{E_\infty\CatOf{RingSpectra}}
 \newcommand{\dx}{\operatorname{d\mathit{x}}}
 
+\DeclareMathOperator{\Fix}{Fix}
+\DeclareMathOperator{\Flag}{Flag}
 \DeclareMathOperator{\im}{im}
 \DeclareMathOperator{\Ind}{Ind}
 \DeclareMathOperator{\Spec}{Spec}
