--- a/preamble.tex
+++ b/preamble.tex
@@ -169,6 +169,8 @@
 \newcommand{\from}{\leftarrow}
 \newcommand{\onto}{\twoheadrightarrow}
 \newcommand{\mhyphen}{\text{-}}
+\newcommand{\Lk}{\Lambda_k}
+\newcommand{\Lj}{\Lambda_j}
 \newcommand{\adjunct}[4]{{#1}\colon\thinspace{#2} \begin{tikzpicture}[baseline] \draw[>=stealth,->] (0,1ex) -- (0.75,1ex); \draw[>=stealth,->] (0.75,0.25ex) -- (0,0.25ex); \end{tikzpicture}\ {#3}\thinspace\colon{#4}}
 
 \renewcommand{\th}{\textsuperscript{th}}
