put matt's name in the heading

--- a/foreword.tex
+++ b/foreword.tex
@@ -1,6 +1,6 @@
 % -*- root: main.tex -*-
 
-\subsection*{Foreword}
+\subsection*{Foreword (Matthew Ando)}
 
 This book does a remarkable job of introducing some of the 
 interaction between algebraic topology and algebraic geometry which
