expand proof of 1.1.12

--- a/cooperations.tex
+++ b/cooperations.tex
@@ -756,7 +756,7 @@ Having gotten some feel for the behavior and the usefulness of the Dieudonn\'e f
 \item \index{Frobenius}Frobenius: given an integer $n \ge 1$, we define \[F_n \gamma(t) = \sumG_{i=1}^n \gamma(\zeta_n t^{1/n}),\] where $\zeta_{n}$ is an $n${\th} root of unity.  (This formula is invariant under permuting the root of unity chosen, so determines a curve defined over the original ground ring by Galois descent.)
 \end{itemize}
 
-\begin{definition}[{cf.\ \Cref{DefnpTypicalLog}, \Cref{pTypicalityInGeneral}}]
+\begin{definition}[{cf.\ \Cref{EveryLogHaspTypification}}]
 A curve $\gamma$ on a formal group is \index{p typical@$p$--typical!curve}$p$--typical when $F_n \gamma = 0$ for $n \ne p^j$.  Write $D_*\G \subseteq C\G$ for the subset of $p$--typical curves.
 \end{definition}
 
