--- a/preamble.tex
+++ b/preamble.tex
@@ -1,5 +1,7 @@
 % -*- root: main.tex -*-
 
+\usepackage{showframe}
+
 \usepackage[pdftex,
             pdfauthor={Eric Peterson},
             pdftitle={Formal Geometry and Bordism Operations},
@@ -56,8 +58,7 @@
 
 
 
-\usepackage[textsize=tiny]{todonotes}
-\usepackage[missing={See gitinfo2 instructions},dirty={(*)}]{gitinfo2}
+\usepackage{todonotes}
 
 \usepackage{pdflscape}
 \usepackage[figuresright]{rotating}
