fix overlap causing bibtex error in the A.1 draft

--- a/characters.tex
+++ b/characters.tex
@@ -321,7 +321,7 @@ Let
 \begin{equation} \label{c1}
 C_{0,k} = S_{k}^{-1}E^0(B\Lk).
 \end{equation}
-The set $S_k$ consists largely of zero divisors. Because of this, we should be concerned that $C_{0,k}$ is the zero ring. Proposition 6.5 of \cite{hkr} saves the day:
+The set $S_k$ consists largely of zero divisors. Because of this, we should be concerned that $C_{0,k}$ is the zero ring. Proposition 6.5 of \cite{HKR} saves the day:
 
 \begin{proposition}
 The ring $C_{0,k}$ is a faithfully flat $\Q \otimes E^0$-algebra.
