turn off showframe

--- a/preamble.tex
+++ b/preamble.tex
@@ -1,6 +1,6 @@
 % -*- root: main.tex -*-
 
-\usepackage{showframe}
+% \usepackage{showframe}
 
 \usepackage[pdftex,
             pdfauthor={Eric Peterson},
