migrate from sseqpages to spectralsequences. REQUIRES TEXLIVE >= 2017

--- a/anss3.tex
+++ b/anss3.tex
@@ -8,7 +8,7 @@
     x tick step=5,
     xscale=0.34,
     yscale=0.75,
-    class labels={above left=0.2em},
+    class labels={below=0.2em},
 ]
 \class[rectangle,fill,inner sep=3pt](0,0)
 
@@ -65,7 +65,7 @@
 \betaclass(54,6)
 
 % tower off of beta_3
-\class[fill,double=white](45,3) \structline(42,2,-1)(45,3,-1)
+\class[circlen=2](45,3) \structline(42,2,-1)(45,3,-1)
 \betaclass(52,4)
 
 % d5s
