--- a/ass.tex
+++ b/ass.tex
@@ -17,16 +17,16 @@
 
 \class(0,0)
 
+% multiples of eta
+\etaclass["\eta"]
+\etaclass["\eta^2"]
+\etaclass["\eta^3"]
+
 % h0 tower
 \foreach \y in {1,...,12} {
     \class(0,\y)
     \structline(0,\y-1)(0,\y)
 }
-
-% multiples of eta
-\etaclass["\eta"](1,1)
-\etaclass["\eta^2"](2,2)
-\etaclass["\eta^3"](3,3)
 
 % divisibilities of nu
 \class(3,2) \structline(3,2)(3,3)
@@ -35,52 +35,54 @@
 \class["\nu^2"](6,2)
 
 \class["\sigma"](7,1)
+\etaclass
+\etaclass["\nu^3"]
 \class(7,2) \structline(7,2)(7,1)
 \class(7,3) \structline(7,3)(7,2)
 \class(7,4) \structline(7,4)(7,3)
 
-
-\etaclass(8,2)
-\etaclass["\nu^3"](9,3)
 \class["P h_1"](9,5)
+\etaclass
+\etaclass
 
 \sseqset{above left label distance=0.3em}
 
 \class["c_0" above left](8,3)
-\etaclass(9,4)
+\etaclass
 
-
-\etaclass(10,6)
-\etaclass(11,7)
 \class(11,6) \structline(11,6)(11,7)
 \class["P h_2"](11,5) \structline(11,5)(11,6)
 
 \class["\sigma^2"](14,2)
 \class(14,3) \structline(14,3)(14,2)
 
+\class["h_4"](15,1)
+\etaclass
+\etaclass
+\etaclass
+\tower(15,2){7} \structline(15,2)(15,1)
+
 \class["d_0"](14,4)
+\etaclass
+\etaclass
+\etaclass
 \class(14,5) \structline(14,5)(14,4)
 \class(14,6) \structline(14,6)(14,5)
 
-\class["h_4"](15,1)
-\tower(15,2){7} \structline(15,2)(15,1)
-\etaclass(15,5)
-
-\etaclass(16,2)
-\etaclass(17,3)
-
-\etaclass(16,6)
-\class["P c_0" above left](16,7) \structline[densely dotted](16,7)(15,4)
+\class["P c_0" above left](16,7)
+\etaclass
+\structline[densely dotted](16,7)(15,4)
 
 \class["e_0"](17,4)
-\tower(17,5){2} \structline(17,5)(17,4)
-\etaclass(17,7) \structline(17,7)(17,6) \structline(17,7)(16,6)
-\etaclass(17,8)
+\class(17,5)
+\class(17,6)
+\structline(17,5)(17,4)
 \class["P^2 h_1" above left](17,9)
+\etaclass
+\structline(17,6)(17,5)
+\structline(17,7)(17,6)
 
 % off the page classes
-\etaclass(18,4)
-\etaclass(18,10)
 
 \class(18,4)
 \class(18,5)
