--- a/preamble.tex
+++ b/preamble.tex
@@ -13,7 +13,7 @@
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{stmaryrd} % for \llbracket and \rrbracket
-\usepackage[version warn]{sseqpages/sseqpages}
+\usepackage{spectralsequences}
 
 % \usepackage{mathpazo} % math & rm
 % \linespread{1.05}        % Palatino needs more leading (space between lines)
@@ -173,7 +173,7 @@
 \newcommand{\adjunct}[4]{{#1}\colon\thinspace{#2} \begin{tikzpicture}[baseline] \draw[>=stealth,->] (0,1ex) -- (0.75,1ex); \draw[>=stealth,->] (0.75,0.25ex) -- (0,0.25ex); \end{tikzpicture}\ {#3}\thinspace\colon{#4}}
 
 \renewcommand{\th}{\textsuperscript{th}}
-\newcommand{\st}{\textsuperscript{st}}
+% \newcommand{\st}{\textsuperscript{st}}
 \newcommand{\nd}{\textsuperscript{nd}}
 \def\Cech{\v{C}ech}
 
@@ -288,18 +288,31 @@
 
 % sseqpages definitions
 
-\sseqnewgroup\tower[1]{
+\DeclareSseqGroup\tower {m} {
     \class(0,0)
-    \foreach \y in {2,...,#1} {
-        \class(0, \y-1)
-        \structline(0, \y-2, -1)(0, \y-1, -1)
+    \foreach \n in {1,...,#1} {
+        \class(0,\n)
+        \structline(0,\n-1)(0,\n)
     }
 }
 
-\sseqnewcmd\etaclass{
-    \class[class labels=above left,\options](\x,\y)
-    \structline(\x-1,\y-1,-1)(\x,\y,-1)
+% \sseqnewgroup\tower[1]{
+%     \class(0,0)
+%     \foreach \y in {2,...,#1} {
+%         \class(0, \y-1)
+%         \structline(0, \y-2, -1)(0, \y-1, -1)
+%     }
+% }
+
+\DeclareSseqCommand \etaclass { O{} }{
+    \class[#1](\lastx+1,\lasty+1)
+    \structline
 }
+
+% \sseqnewcmd\etaclass{
+%     \class[class labels=above left,\options](\x,\y)
+%     \structline(\x-1,\y-1,-1)(\x,\y,-1)
+% }
 
 % section headers
 
