--- a/quillen.tex
+++ b/quillen.tex
@@ -857,7 +857,7 @@ Take the orientation to be $MU \xrightarrow{1} MU$, so that we are considering $
 \end{itemize}
 \end{definition}
 
-Having now set up an encompassing theory of stable operations, we now seek to give a formula for the cyclic Tate power operation in this framework.  In order to approach this, we initially set our sights on the too-lofty goal of computing the total power operation $P^{C_n}(f)$ for $f \in MU^{2q}(X)$ an $MU$--cohomology class on a finite complex $X$, without necessarily passing to the Tate construction.  Because of the definition $MU = \colim_k MU(k)$ and because $P^{C_n}$ is natural under pullback, it will suffice for us to study the effect of $P^{C_n}$ on the universal classes \[u_m\co MU(m) \to MU,\] after using the canonical $MU$--Thom isomorphism to reinterpret them as classes on a suspension spectrum.  We begin with the canonical orientation itself: \[u_1 = x \in h\CatOf{Spectra}(MU(1), MU) \cong MU^2 \CP^\infty.\]  In order to understand the effect $P^{C_n}(x)$ of the power operation on $x$, we recall a different interpretation of $x$: it is also the $1${\st} Conner--Floyd--Chern class of the \index{canonical bundle}\index{tautological bundle|see {canonical bundle}}tautological bundle $\L$ on $\CP^\infty$, i.e., \[x\co MU(1) \to MU\] is the Thomification of the block inclusion \[\L\co BU(1) \to BU.\]  The $H_\infty^2$--ring spectrum construction defining $P^{C_n}_{\mathrm{ext}}(x)$ thus fits into the following diagram:
+Having now set up an encompassing theory of stable operations, we now seek to give a formula for the cyclic Tate power operation in this framework.  In order to approach this, we initially set our sights on the too-lofty goal of computing the total power operation $P^{C_n}(f)$ for $f \in MU^{2q}(X)$ an $MU$--cohomology class on a finite complex $X$, without necessarily passing to the Tate construction.  Because of the definition $MU = \colim_k MU(k)$ and because $P^{C_n}$ is natural under pullback, it will suffice for us to study the effect of $P^{C_n}$ on the universal classes \[u_m\co MU(m) \to MU,\] after using the canonical $MU$--Thom isomorphism to reinterpret them as classes on a suspension spectrum.  We begin with the canonical orientation itself: \[u_1 = x \in h\CatOf{Spectra}(MU(1), MU) \cong MU^2 \CP^\infty.\]  In order to understand the effect $P^{C_n}(x)$ of the power operation on $x$, we recall a different interpretation of $x$: it is also the $1$\textsuperscript{st} Conner--Floyd--Chern class of the \index{canonical bundle}\index{tautological bundle|see {canonical bundle}}tautological bundle $\L$ on $\CP^\infty$, i.e., \[x\co MU(1) \to MU\] is the Thomification of the block inclusion \[\L\co BU(1) \to BU.\]  The $H_\infty^2$--ring spectrum construction defining $P^{C_n}_{\mathrm{ext}}(x)$ thus fits into the following diagram:
 \begin{center}
 \begin{tikzcd}
 \Susp^\infty_+ BU(1) \arrow["\Delta"]{d} \arrow{r} & \Susp^\infty_+ BU(1) \sm \Susp^\infty_+ BC_n \arrow["\Delta_{hC_n}"]{d} \\
@@ -865,7 +865,7 @@ Having now set up an encompassing theory of stable operations, we now seek to gi
 (\Susp^2 MU)^{\sm n} \arrow{r} & (\Susp^2 MU)^{\sm n}_{hC_n} \arrow{r} & \Susp^{2n} MU.
 \end{tikzcd}
 \end{center}
-The commutativity of the widest rectangle (i.e., the justification for the name ``$c_n$'' on the right-most vertical arrow) comes from the Cartan formula for Chern classes: because $\L^{\oplus n}$ splits as the sum of $n$ line bundles, $c_n(\L^{\oplus n})$ is computed as the product of the $1${\st} Chern classes of those line bundles.  Second, the commutativity of the right-most square is not trivial: it is a specific consequence of how the multiplicative structure on $MU$ arises from the direct sum of vector bundles.\footnote{In general, any notion of first Chern class $\Susp^\infty_+ BU(1) \to \Susp^2 E$ gives rise to a \emph{noncommuting} diagram of this same shape.  The two composites $\Susp^\infty_+ BU(1)^{\sm n}_{hC_n} \to \Susp^{2n} E$ need not agree, since $\L(n)$ has no \textit{a priori} reason to be compatible with the factorization appearing in the $H_\infty^2$--structure.  They turn out to be related nonetheless, and their exact relation (as well as a procedure for making them agree in certain cases) is the subject of \Cref{PowerOpnsSection}.}  The commutativities of the other two squares comes from the natural transformation from a $C_n$--space to its homotopy orbit space.
+The commutativity of the widest rectangle (i.e., the justification for the name ``$c_n$'' on the right-most vertical arrow) comes from the Cartan formula for Chern classes: because $\L^{\oplus n}$ splits as the sum of $n$ line bundles, $c_n(\L^{\oplus n})$ is computed as the product of the $1$\textsuperscript{st} Chern classes of those line bundles.  Second, the commutativity of the right-most square is not trivial: it is a specific consequence of how the multiplicative structure on $MU$ arises from the direct sum of vector bundles.\footnote{In general, any notion of first Chern class $\Susp^\infty_+ BU(1) \to \Susp^2 E$ gives rise to a \emph{noncommuting} diagram of this same shape.  The two composites $\Susp^\infty_+ BU(1)^{\sm n}_{hC_n} \to \Susp^{2n} E$ need not agree, since $\L(n)$ has no \textit{a priori} reason to be compatible with the factorization appearing in the $H_\infty^2$--structure.  They turn out to be related nonetheless, and their exact relation (as well as a procedure for making them agree in certain cases) is the subject of \Cref{PowerOpnsSection}.}  The commutativities of the other two squares comes from the natural transformation from a $C_n$--space to its homotopy orbit space.
 
 Hence, the internal cyclic power operation $P^{C_n}(x)$ applied to the canonical coordinate $x$ is defined by the composite
 \begin{align*}
@@ -903,12 +903,12 @@ P^{C_n}(x) = c_n(\Delta_{hC_n}^* \L(n)) & = e\left( \bigoplus_{j=0}^{n-1} \pi_1^
 & = \prod_{j=0}^{n-1} c_1\left( \pi_1^* \L \otimes \pi_2^* \eta^{\otimes j} \right)
 = \prod_{j=0}^{n-1} (x +_{MU} [j]_{MU}(t)).
 \end{align*}
-Here $x$ is still the $1${\st} Conner--Floyd--Chern class of $\L$ and $t$ is the Euler class of $\eta$.  We now try to make sense of this product expression for $c_n(\Delta_{hC_n}^* \L(n))$ by expanding it in powers of $x$ and identifying its component pieces.
+Here $x$ is still the $1$\textsuperscript{st} Conner--Floyd--Chern class of $\L$ and $t$ is the Euler class of $\eta$.  We now try to make sense of this product expression for $c_n(\Delta_{hC_n}^* \L(n))$ by expanding it in powers of $x$ and identifying its component pieces.
 \begin{lemma}\label{AjAndBjAreInTheFGLSubring}
 There is a series expansion \[P^{C_n}(x) = \prod_{j=0}^{n-1} (x +_{MU} [j]_{MU}(t)) = w + \sum_{j=1}^\infty a_j(t) x^j,\] where $a_j(t)$ is a series with coefficients in the subring $C \subseteq MU_*$ spanned by the coefficients of the natural $MU$--formal group law.  The leading term \[w = e(\rho) = \prod_{j=0}^{n-1} e(\eta^{\otimes j}) = \prod_{j=0}^{n-1} [j]_{MU} (e(\eta)) = (n-1)! t^{n-1} + \sum_{j \ge n} b_j t^j\] is the Euler class of the reduced permutation representation, and, again, the elements $b_j$ lie in the subring $C$. \qed
 \end{lemma}
 
-This is about as much information as we can hope to extract in the $1${\st} universal case.  We thus return to our original goal: understanding the action of $P^{C_n}$ on each of the canonical classes \[u_m\co MU(m) \to MU.\]  We approach this via the splitting principle by first rewriting the formula in \Cref{AjAndBjAreInTheFGLSubring} in a form amenable to direct sums:
+This is about as much information as we can hope to extract in the $1$\textsuperscript{st} universal case.  We thus return to our original goal: understanding the action of $P^{C_n}$ on each of the canonical classes \[u_m\co MU(m) \to MU.\]  We approach this via the splitting principle by first rewriting the formula in \Cref{AjAndBjAreInTheFGLSubring} in a form amenable to direct sums:
 \begin{align*}
 P^{C_n}(x) & = \sum_{|\alpha| \le 1} w^{1 - |\alpha|} a_\alpha(t) s_\alpha(x), &
 a_\alpha(t) & = \prod_{j=0}^\infty a_j(t)^{\alpha_j}.
