add some index entries

--- a/sigma.tex
+++ b/sigma.tex
@@ -326,7 +326,7 @@ This gives a compatible system of symmetric maps, and hence altogether this give
 \end{proof}
 
 \begin{corollary}\label{CharacterizationOfBSUUpperE}
-There is an isomorphism \[\Spec E_0 B\SU = \left\{\begin{array}{c} \text{functions $f\co u^* (\CP^\infty_E)^{\times 2} \to \Gm$} \\ \text{which are symmetric, rigid, and $kU^0$--linear} \end{array}\right\}.\]
+There is an isomorphism\index{formal group!cohomology} \[\Spec E_0 B\SU = \left\{\begin{array}{c} \text{functions $f\co u^* (\CP^\infty_E)^{\times 2} \to \Gm$} \\ \text{which are symmetric, rigid, and $kU^0$--linear} \end{array}\right\}.\]
 \end{corollary}
 \begin{proof}
 Follow the sequence of isomorphisms
@@ -1589,7 +1589,7 @@ This is a culmination of the above calculations.  As argued at the beginning of 
 \end{proof}
 
 \begin{theorem}\label{MStringTriumvirate}
-Let $\G$ be a formal group over a perfect field of characteristic $2$, and assume $\height \G \le 2$.  For $E$ the associated Morava $K$--theory or $E$--theory, there are isomorphisms
+Let $\G$ be a formal group over a perfect field of characteristic $2$, and assume $\height \G \le 2$.  For $E$ the associated Morava $K$--theory\index{Morava K theory@Morava $K$--theory} or $E$--theory, there are isomorphisms
 \begin{align*}
 \Spec E_0 M\String & \xrightarrow\cong \Sigma^3(\CP^\infty_E; \sheaf I(0)), &
 \Spec E_0 M\Spin & \xrightarrow\cong C^2_{\mathrm{is}}(\CP^\infty_E; \sheaf I(0)),
