--- a/cooperations.tex
+++ b/cooperations.tex
@@ -218,7 +218,7 @@ However, exactly this complaint is eliminated by passing to the additive unstabl
 \Spec \HFtwo P_0 \HFtwo P & \cong \InternalAut{\G_a} \\
 \left(f\co \F_2[\xi_0^\pm, \xi_1, \ldots] \to R \right) & \mapsto \left(x \mapsto \sum_{j=0}^\infty f(\xi_j) x^{2^j}\right),
 \end{align*}
-and the computation above presents $\Spec \mathcal A P_0$ as the open subscheme of $\Spec \F_2[\xi_0, \xi_1, \ldots]$ determined by the invertibility of $\xi_0$.\footnote{Note that $Q^* \HFtwo_* \OS{\HFtwo}{*}$ does \emph{not} form a Hopf algebra, essentially because it is missing a version of $\chi$ that inverts $\circ$--multiplication.  It is remarkable that inverting the homology suspension element automatically produces an antipode.}  Hence, we see that a compatible name for the inertia group in the unstable context for $\HFtwo$ is
+and the computation above presents $\Spec \mathcal A P_0$ as the open subscheme of $\Spec \F_2[\xi_0, \xi_1, \ldots]$ determined by the invertibility of $\xi_0$.\footnote{Note that $Q^* \HFtwo_* \OS{\HFtwo}{*}$ does \emph{not} form a Hopf algebra, essentially because it is missing a version of $\chi$ that inverts $\circ$--multiplication.  It is remarkable that inverting the homology suspension element automatically produces an antipode.}  Hence, we see that a compatible name for the inertia group in the unstable context for $\HFtwo$ is\index{formal group!homomorphism}
 \begin{align*}
 \Spec Q^* \HFtwo P_0 \OS{\HFtwo P}{0} & \cong \InternalEnd{\G_a} \\
 \left(f\co \F_2[\xi_0, \xi_1, \ldots] \to R \right) & \mapsto \left(x \mapsto \sum_{j=0}^\infty f(\xi_j) x^{2^j}\right).
@@ -480,7 +480,7 @@ There is an isomorphism $Q^* R[S] \cong R \otimes S$. \qed
 \end{corollary}
 
 \begin{corollary}
-For complex-orientable $F$ and $E$, there is a natural isomorphism \[\Spec Q^* \AA(F, E) \cong \InternalHom{FormalGroups}(\CP^\infty_F, \CP^\infty_E).\]
+For complex-orientable $F$ and $E$, there is a natural isomorphism\index{formal group!homomorphism} \[\Spec Q^* \AA(F, E) \cong \InternalHom{FormalGroups}(\CP^\infty_F, \CP^\infty_E).\]
 \end{corollary}
 \begin{proof}
 This is a matter of calculating $Q^* \AA(F, E)$, which is possible to do coordinate-freely, but it is at least as clear to just give in and pick coordinates.  Doing this and using \Cref{ArithmeticInQAst}, we have \[\bigast_{i, j} \left([a_{ij}^E] \circ \left( \sum_k \beta_k s^k \right)^{\circ i} \circ \left( \sum_\ell \beta_\ell t^\ell \right)^{\circ j} \right) \equiv \sum_{i, j} a_{ij}^E \left( \sum_k \beta_k s^k \right)^i \left( \sum_\ell \beta_\ell t^\ell \right)^j \tag{in $Q^*$},\] from which it follows that \[Q^* \AA(F, E) = \left. (F_* \otimes E_*)[\beta_0, \beta_1, \beta_2, \ldots] \middle/ \left( \beta(s +_F t) = \beta(s) +_E \beta(t) \right) \right. . \qedhere\]
@@ -1184,7 +1184,7 @@ Let $\mathbb G$ be a $p$--divisible group over a perfect field $k$ of positive c
 \end{theorem}
 
 \begin{lemma}[{\cite[Remark 2.2.5]{HopkinsLurie}}]
-If $\mathbb G$ is a connected $p$--divisible group of height $d$ and of dimension $n$ as a formal variety, then
+If $\mathbb G$ is a connected $p$--divisible group of height $d$ and of dimension $n$ as a formal variety, then\index{formal group!cohomology}
 \[\pushQED{\qed}
 \operatorname{rank}\left(H^1(\mathbb G[p]; \G_a)\right) = d - n. \qedhere
 \popQED\]
