fix typo in foreword

--- a/foreword.tex
+++ b/foreword.tex
@@ -45,7 +45,7 @@ Ravenel's ``green book.'' Until recently, students entering the
 subject since the 1990's have not had access to comparable sources
 which introduce them to the mix of algebraic topology and algebraic
 geometry which form the context for  
-modern chormatic stable homotopy theory (Strickland's 
+modern chromatic stable homotopy theory (Strickland's 
 lovely 
 ``Formal Schemes and Formal Groups'' is a notable exception).  This has
 begun to change, and there are several expositions of aspects of the
