kill some todos

--- a/quillen.tex
+++ b/quillen.tex
@@ -655,7 +655,6 @@ P^{\Sigma_n}(f + g) = \sum_{i + j = n} \Tr_{\Sigma_i \times \Sigma_j}^{\Sigma_n}
 \noindent To produce binomial formulas for the modified power operations, we use the following Lemma:
 
 \begin{lemma}[{\cite[p.\ 109-110]{AdamsInfiniteLoopSpaces}, \cite[Section 6.5]{HKR}}]
-\todo{Nat indicated that there is some kind of transitivity condition here that I am numb to.}
 Let $G_1, G_2$ be subgroups of $H$, and consider the homotopy pullback diagram
 \begin{center}
 \begin{tikzcd}
@@ -994,7 +993,7 @@ The Euler class of the first bundle is the class $x$, and it pulls back along $n
 MU^*(BU(1)[n]) \arrow[leftarrow]{ru} & & MU^{*+2} BU(1) \arrow[leftarrow]{ll}{\partial}
 \end{tikzcd}
 \end{center}
-where $x$ is the coordinate on $BU(1)_{MU}$.  Because \index{formal group!l series@$\ell$--series}$[n]_{MU}(x) = nx + \cdots$ and because $\widetilde{MU}^2 \CP^1$ has no $n$--torsion\todo{Is this really enough? I'm confused again.}, the right diagonal map is injective and hence $\partial = 0$.  This therefore gives a short exact sequence of Hopf algebras, which we can reinterpret as a short exact sequence of group schemes \[0 \to BU(1)[n]_{MU} \to BU(1)_{MU} \xrightarrow{n} BU(1)_{MU} \to 0. \qedhere\]
+where $x$ is the coordinate on $BU(1)_{MU}$.  Because \index{formal group!l series@$\ell$--series}$[n]_{MU}(x) = nx + \cdots$ and because $\widetilde{MU}^2 \CP^1$ has no $n$--torsion, the right diagonal map is injective and hence $\partial = 0$.  This therefore gives a short exact sequence of Hopf algebras, which we can reinterpret as a short exact sequence of group schemes \[0 \to BU(1)[n]_{MU} \to BU(1)_{MU} \xrightarrow{n} BU(1)_{MU} \to 0. \qedhere\]
 \end{proof}
 
 \begin{corollary}
