name some named theorems

--- a/quillen.tex
+++ b/quillen.tex
@@ -103,7 +103,7 @@ A \index{formal scheme!formal variety}\textit{formal affine variety} (of dimensi
 \end{definition}
 
 This definition allows local theorems from analytic differential geometry to be imported in coordinate-free language.  For instance, there is the following version of the \index{inverse function theorem}inverse function theorem:
-\begin{theorem}\label{InverseFunctionTheoremForFVars}
+\begin{theorem}[Inverse function theorem]\label{InverseFunctionTheoremForFVars}
 % \citeme{This is 3.1.8 in the Crystals notes.}
 A pointed map $f\co V \to W$ of finite--dimensional formal varieties is an isomorphism if and only if the induced map $T_0 f\co T_0 V \to T_0 W$ is an isomorphism of $R$--modules. \qed
 \end{theorem}
@@ -1091,7 +1091,7 @@ However, one also notes that $H\Z_* MU = \Z[b_1, b_2, \ldots]$ carries the unive
 The ring $\sheaf O_{\moduli{fgl}}$ carrying the universal formal group law is free: it is isomorphic to a polynomial ring over $\Z$ in countably many generators. \qed
 \end{theorem}
 
-\begin{corollary}\label{QuillensTheorem}
+\begin{corollary}[Quillen's theorem]\label{QuillensTheorem}
 The natural map $\sheaf O_{\moduli{fgl}} \to MU_*$ classifying the formal group law on $MU_*$ is an isomorphism.
 \end{corollary}
 \begin{proof}
