--- a/finite.tex
+++ b/finite.tex
@@ -115,7 +115,7 @@ which shows that any descent datum (including those not arising, a priori, from 
 
 The following Theorem is the culmination of a typical first investigation of descent:\footnote{For details and additional context, see Vistoli~\cite[Section 4.2.1]{Vistoli}.  The story in the context of Hopf algebroids is also spelled out in detail by Miller~\cite{MillerSheavesGradings}.}
 
-\begin{theorem}[{\cite[Expos\'e VIII]{GrothendieckSGAI}}]\label{OriginalFFDescent}
+\begin{theorem}[{Faithfully flat descent, \cite[Expos\'e VIII]{GrothendieckSGAI}}]\label{OriginalFFDescent}
 If $f\co R \to S$ is \index{descent!faithfully flat}faithfully flat, the natural assignments
 \begin{center}
 \begin{tikzcd}
@@ -637,7 +637,7 @@ Recall from \Cref{KudoArakiIsomorphism} the Kudo--Araki isomorphism \[\moduli{fg
 
 \noindent What is \emph{much} harder to prove is the following:
 
-\begin{theorem}[{\cite[Corollary 2.4 and Proposition 2.5]{LandweberInvariantRegIdeals}, cf.\ \cite[Theorem 4.9]{Wilson}}]\label{LandwebersClassificationOfClosedSubstacks}
+\begin{theorem}[{Landweber's classification of invariant prime ideals, \cite[Corollary 2.4 and Proposition 2.5]{LandweberInvariantRegIdeals}, cf.\ \cite[Theorem 4.9]{Wilson}}]\label{LandwebersClassificationOfClosedSubstacks}
 The unique closed reduced substack of $\moduli{fg} \times \Spec \Z_{(p)}$ of codimension $d$ is selected by the invariant prime ideal $I_d \subseteq \sheaf O_{\moduli{fgl}^{\ptyp}}$.
 \end{theorem}
 \begin{proof}[Proof sketch]
@@ -760,7 +760,7 @@ where we have required an \emph{equality} of formal group laws over the common p
 \end{remark}
 
 The main result about $(\moduli{fg})^\wedge_\Gamma$ is due to Lubin and Tate:
-\begin{theorem}[{\cite[Theorem 3.1]{LubinTate}}]\label{LubinTateModuliThm}
+\begin{theorem}[{Lubin--Tate theorem, \cite[Theorem 3.1]{LubinTate}}]\label{LubinTateModuliThm}
 Suppose that $\height \Gamma < \infty$ for $\Gamma$ a formal group over $k$ a perfect field of positive characteristic $p$.  The functor $(\moduli{fg})^\wedge_\Gamma$ is valued in essentially discrete groupoids, and it is naturally equivalent to a smooth formal scheme over $\W_p(k)$ of dimension $(\height(\Gamma) - 1)$.
 \end{theorem}
 
@@ -899,7 +899,7 @@ Having accomplished all our major goals, we close our algebraic analysis of $\mo
 \section{Nilpotence and periodicity in finite spectra}\label{NilpotenceAndPeriodicity}
 
 With our analysis of $\moduli{fg}$ complete, our first goal in this Lecture is to finish the program sketched in the introduction to this Case Study by manufacturing those interesting homology theories connected to the functor $\context{MU}(-)$.  We begin by rephrasing our main tool, \Cref{LandwebersStackyTheorem}, in terms of algebraic conditions.
-\begin{theorem}[{\cite[Corollary 2.7]{LandweberHomologicalComodules} and \cite[Theorem 21.4 and Proposition 21.5]{HopkinsCOCTALOS}}]
+\begin{theorem}[{Landweber Exact Functor Theorem, \cite[Corollary 2.7]{LandweberHomologicalComodules} and \cite[Theorem 21.4 and Proposition 21.5]{HopkinsCOCTALOS}}]
 Let $\sheaf F$ a \index{sheaf!quasicoherent}quasicoherent sheaf over $\moduli{fg} \times \Spec \Z_{(p)}$, thought of as a \index{comodule}comodule $M$ for the Kudo--Araki Hopf algebroid (cf.\ \Cref{KudoArakiIsomorphism}) \[(A, \Gamma) = (\sheaf O_{\moduli{fgl}^{\ptyp}}, \sheaf O_{\moduli{fgl}^{\ptyp}}[t_1, t_2, \ldots]).\]  If $(p, v_1, \ldots, v_d, \ldots)$ forms an infinite regular sequence on $M$, then \[X \mapsto M \otimes_{\sheaf O_{\moduli{fgl}^{\ptyp}}} MU_0(X)\] determines a homology theory on \emph{finite} spectra $X$.  Moreover, if $M/I_d = 0$ for some $d \gg 0$, then the same formula determines a homology theory on \emph{all} spectra $X$.
 \label{LEFTRealTheoremWithProof}
 \end{theorem}
@@ -997,7 +997,7 @@ is actually affine, and this is a witness to the fact that $X(2) \sm KO$ is a co
 
 Having constructed these chromatic homology theories, for the rest of this Lecture we pursue an example of a ``fiberwise'' analysis of a phenomenon in homotopy theory.  First, recall the following classical theorem:
 
-\begin{theorem}[{\cite{Nishida}, \cite[Section II.2]{BMMS}}]
+\begin{theorem}[{Nishida's theorem, \cite{Nishida}, \cite[Section II.2]{BMMS}}]
 Every homotopy class $\alpha \in \pi_{\ge 1} \S$ is nilpotent. \qed
 \end{theorem}
 
@@ -1021,7 +1021,7 @@ A ring spectrum $E$ \index{detects nilpotence}\textit{detects nilpotence} if for
 
 This question and surrounding issues formed the basis of Ravenel's nilpotence conjectures~\cite[Section 10]{RavenelLocalizationWRTPeriodic}, which were resolved by by Devinatz, Hopkins, and Smith~\cite{DHS,HopkinsSmith}.  One of their two main technical achievements was to demonstrate that we already have access to a nice homology theory which detects nilpotence:
 
-\begin{theorem}[{\cite[Theorem 1.i]{DHS}}]\label{DevinatzHopkinsSmith}
+\begin{theorem}[{Devinatz--Hopkins--Smith Nilpotence Theorem, \cite[Theorem 1.i]{DHS}}]\label{DevinatzHopkinsSmith}
 The spectrum $MU$ detects nilpotence. \qed
 \end{theorem}
 
@@ -1114,7 +1114,7 @@ By a small variant of local nilpotence detection (\Cref{LocalNilpotenceDetection
 We now work to show that this smash product lies in the thick subcategory $\CatOf C$ of interest.  First, note that it suffices to show that $\cofib f^{\sm j}$ on its own lies in $\CatOf C$: a finite spectrum (such as $Y$ or $F$) can be expressed as a finite gluing diagram of spheres, and smashing this through with $\cofib f^{\sm j}$ then expresses $Y \sm \cofib f^{\sm j}$ as the iterated cofiber of maps with source and target in $\CatOf C$.  With that in mind, we will in fact show that $\cofib f^{\sm k}$ lies in $\CatOf C$ for all $k \ge 1$.  Consider the following smash version of the octahedral axiom: the factorization \[F \sm F^{\sm (k-1)} \xrightarrow{1 \sm f^{\sm (k-1)}} F \sm \S^{\sm (k-1)} \xrightarrow{f \sm 1} \S \sm \S^{\sm (k-1)}\] begets a cofiber sequence \[F \sm \cofib f^{\sm (k-1)} \to \cofib f^{\sm k} \to \cofib f \sm \S^{\sm (k-1)}.\]  Noting that the base case $\cofib(f) = R = X \sm DX$ lies in $\CatOf C$, we can inductively use the $2$-out-of-$3$ property on the octahedral cofiber sequence to see that $\cofib(f^{\sm k})$ lies in $\CatOf C$ for all $k$.  It follows in particular that $Y \sm \cofib(f^{\sm j})$ lies in $\CatOf C$, and using the retraction $Y$ belongs to $\CatOf C$ as well.
 \end{proof}
 
-\begin{theorem}[{\cite[Theorem 4.11, Section 5, and Theorem 9]{HopkinsSmith}}]\label{CdEqualsDd}
+\begin{theorem}[{Hopkins--Smith Periodicity Theorem, \cite[Theorem 4.11, Section 5, and Theorem 9]{HopkinsSmith}}]\label{CdEqualsDd}
 A $p$--local finite spectrum is $K(d-1)$--acyclic exactly when it admits a $v_d$--self--map.  Additionally, the inclusion $\CatOf C_d \subsetneq \CatOf C_{d-1}$ is proper.
 \end{theorem}
 \begin{proof}[Executive summary of proof]
@@ -1173,7 +1173,7 @@ The functor \[\context{MU}(-)\co \CatOf{Spectra}^{\fin} \to \CatOf{Coh}(\context
 
 The construction as we have described it falls short of completely recovering $\Spec R$, as we have constructed only a topological space rather than a locally ringed space (or anything otherwise equipped locally with algebraic data, as in our functor of points perspective).  The approach taken by Balmer~\cite[Section 6]{Balmer} is to use Tannakian reconstruction to extract a structure sheaf of local rings from the prime $\otimes$--ideal subcategories.  We, however, are at least as interested in finite spectra as we are the ring spectrum $\S$, so we will take an approach that emphasizes module categories rather than local rings.  Specifically, Bousfield's theory of \index{Bousfield localization}homological localization allows us to lift the localization structure among open substacks of $\moduli{fg}$ to the category $\CatOf{Spectra}$ as follows:
 
-\begin{theorem}[{\cite{BousfieldLocalization}, \cite[Theorem 7.7]{Margolis}}]\label{BousfieldLocalizationThm}
+\begin{theorem}[{Bousfield localzation, \cite{BousfieldLocalization}, \cite[Theorem 7.7]{Margolis}}]\label{BousfieldLocalizationThm}
 Let $j\co \Spec R \to \moduli{fg}$ be a flat map, and let $R_*$ denote the homology theory associated to it by \Cref{LandwebersStackyTheorem}.  There is then a diagram
 \begin{center}
 \begin{tikzcd}[column sep=2.2cm,row sep=2cm]
@@ -1241,8 +1241,8 @@ E[n, n] \arrow{r} \arrow[equals]{d} & E[n-1, n] \arrow{r} \arrow{d} & E[n-2, n] 
 Applying $L_\Gamma$ preserves this colimit diagram, but the above argument shows that $HA$ is $L_\Gamma$--acyclic for any abelian group $A$.  This gives the statement about coconnective spectra, from which the general statement follows by considering the cofiber sequence \[E[n, \infty) \to E \to E(-\infty, n). \qedhere\]
 \end{proof}
 
-\begin{corollary}[{\cite[Proposition 23.5]{LurieChromaticCourseNotes}}]\label{ChromaticFractureSquares}
-There are a homotopy pullback squares
+\begin{corollary}[{Chromatic fracture, \cite[Proposition 23.5]{LurieChromaticCourseNotes}}]\label{ChromaticFractureSquares}
+There are homotopy pullback squares
 \begin{center}
 \begin{tikzcd}
 L_d X \arrow{r} \arrow{d} \arrow[dr, phantom, "\lrcorner", very near start] & \widehat L_d X \arrow{d} & X \arrow{r} \arrow{d} \arrow[dr, phantom, "\lrcorner", very near start] & \prod_p X^\wedge_p \arrow{d} \\
@@ -1260,7 +1260,7 @@ For the left-hand square, the inclusion of the open substack of dimension $d-1$ 
 
 These functors and their properties listed thus far give a tight analogy between certain local categories of spectra and sheaves supported on particular submoduli of formal groups, in a way that lifts the six-functors formalism of $j_* \vdash j^*$ to the level of spectra.  With this analogy in hand, however, one is led to ask considerably more complicated questions whose proofs are not at all straightforward.  For instance, a useful fact about \emph{coherent} sheaves on $\moduli{fg}$ is that they are completely determined by their restrictions to all of the open submoduli.  The analogous fact about finite spectra is referred to as \index{chromatic localization!convergence}\textit{chromatic convergence}:
 
-\begin{theorem}[{\cite[Theorem 7.5.7]{RavenelOrangeBook}}]\label{ChromaticConvergence}
+\begin{theorem}[{Chromatic convergence, \cite[Theorem 7.5.7]{RavenelOrangeBook}}]\label{ChromaticConvergence}
 The homotopy limit of the tower \[\cdots \to L_d F \to L_{d-1} F \to \cdots \to L_1 F \to L_0 F\] recovers the $p$--local homotopy type of any finite spectrum $F$.\footnote{Spectra satisfying this limit property are said to be \index{chromatic localization!completeness}\textit{chromatically complete}, which is closely related to being \index{chromatic localization!harmonic}\textit{harmonic}, i.e., being local with respect to $\bigvee_{d=0}^\infty K(d)$.  (I believe this a joke about ``music of the spheres''.)  It is known that nice Thom spectra are harmonic~\cite{Kriz} (so, in particular, every suspension and finite spectrum), that every finite spectrum is chromatically complete, and that there exist some harmonic spectra which are not chromatically complete~\cite[Section 5.1]{Barthel}.}\footnote{A consequence of the fact that $p$--local finite spectra are $\bigvee_{d < \infty} K(d)$--local, there are no nontrivial maps $\HFp \to F$, and in particular the Spanier--Whitehead dual of $\HFp$ is null.}\footnote{While we're talking about $\bigvee_{d < \infty} K(d)$, the cofiber of $\bigvee_{d < \infty} K(d) \to \prod_{d < \infty} K(d)$, where we are using the $2(p^d-1)$--periodic spectra, is concentrated in degree zero since all other homotopy degrees carry contributions from only finitely many factors.  It follows that the cofiber is Eilenberg--Mac Lane---an unusual property.} \qed
 \end{theorem}
 
